# async-socket-exchange-rate

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  websocket-client.sh
compose/: Dockerfile
compose/envs/: common.env  sample.common.env
src/: app.py  conftest.py  main.py
src/async_tasks/: async_periodic_tasks.py
src/async_tasks/emcont_service/: models.py  service.py
src/core/: constants.py
src/db/: database.py
src/db/models/: __init__.py  exceptions.py  exchange_rate.py
src/db/models/tests/: test_db_models.py  test_models.py
src/exchange_rate/: __init__.py  client_service.py  connection_service.py  models.py  routers.py  utils.py
src/exchange_rate/tests/: test_models.py  test_views.py
src/rpc/: connection_service.py  models.py
src/rpc/tests/: test_models.py
src/settings/: __init__.py  settings.py
