[tool.poetry]
name = "async-exchange-server"
version = "0.1.0"
description = ""
authors = ["Artem Bulatov <gencurrent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
websockets = "^12.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
loguru = "^0.7.2"
motor = "^3.4.0"
beanie = "^1.25.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.0"
asgiref = "^3.8.1"
pre-commit = "^3.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
mypy = "^1.10.0"
pylint = "^3.1.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
